# visualizer

./: .gitignore  Cargo.toml  README.md
assets/: building.glb  deep_water.glb  deep_water1.glb  deep_water2.glb  grass.glb  lava.glb  lava2.glb  shallow_water1.glb  snow.glb  teleport.glb
assets/3dModels/: bank.glb  hill.glb  mountain.glb  robot.glb  sand.glb  shallow_water.glb  shallow_water2.glb  street.glb
src/: assets_loader.rs  camera.rs  game_data.rs  gui_overlay.rs  main.rs  movement.rs  robot.rs  rudimental_a_i.rs  user_inputs.rs  weather.rs  world.rs
