[package]
name = "bevy_visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
robotics_lib = { git = "https://github.com/Advanced-Programming-2023/Robotic-Lib" }
who_needs_gv_world_generator = { git = "https://github.com/Advanced-Programming-Carasau-Project/world_generator.git" }

[profile.dev]
opt-level = 1

[profile.dev.pakage."*"]
opt-level = 3