[package]
authors = ["Giulio Lo Cigno"]
name = "bevy_visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
who_needs_gv_world_generator = {version = "0.1.0", registry = "kellnr"}
robotics_lib = {version = "0.1.21", registry = "kellnr"}

[profile.dev]
opt-level = 1

[profile.dev.pakage."*"]
opt-level = 3