[package]
authors = ["Giulio Lo Cigno"]
name = "visualizer_lo_cigno_giulio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
rip_worldgenerator = {version = "0.5.43", registry = "kellnr"}
#who_needs_gv_world_generator = {version = "0.1.1", registry = "kellnr"}
oxagaudiotool = {version = "0.2.0", registry = "kellnr"}
#who_needs_gv_world_generator = {git = "https://github.com/Advanced-Programming-Carasau-Project/world_generator.git"}
robotics_lib = {version = "0.1.21", registry = "kellnr"}
#robotics_lib = {git = "https://github.com/Advanced-Programming-2023/Robotic-Lib.git"}

[profile.dev]
opt-level = 1

[profile.dev.pakage."*"]
opt-level = 3